# parallax

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EVAL.md  FAILURES.md  PRD.md  README.md  RISKS.md  ROADMAP.md  SECURITY.md  contracts.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
data/synthetic/: demo.json
docs/adr/: 0002-llm-senses-deterministic-decides.md
