[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parallax"
version = "0.1.0"
description = "An AI assistant for project managers: claimed-versus-observed project instrumentation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Nuwan Samaranayake" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "sqlalchemy>=2",
    "psycopg[binary]",
    "alembic",
    "redis",
    "httpx",
    "aignite-groundwork @ git+https://github.com/nuwansamaranayake/groundwork@v0.1.0",
    "numpy",
    "pandas",
    "networkx",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
